# mcp-mcp

./: .gitignore  CLAUDE.md  INSTALLATION.md  JOURNAL.md  Justfile  PRD.md  README.md  TASKS.md  main.py  mcp_db.py  mcp_db_tests.py  pyproject.toml  search_test.py  semantic_search.py  settings.py  test_e2e.py  test_main.py
.github/workflows/: update-data.yml  update-readme.yml
agents/: __init__.py  agents_manager.py
agents/greeter/: agent.py
agents/template/: agent.py
db/: __init__.py  database.py  schema_versions.py  semantic_search.py  sources.py  test_database.py  test_precomputed_data_workflow.py  test_schema_versions.py  test_sources.py
scripts/: build_data.py  update_readme_shields.py
tests/: test_e2e.py  test_main.py  test_origin_validation.py
