[project]
name = "mcp-mcp"
version = "0.1.0"
description = "MCP-MCP: Meta-MCP Server for dynamic MCP server discovery and provisioning"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["mcp", "model-context-protocol", "ai", "claude", "server-discovery"]
authors = [
    {name = "MCP-MCP Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "google-adk>=1.4.2",
    "langfuse>=2,<3",
    "litellm>=1.73.0",
    "rich>=14.0.0",
    "sentence-transformers>=4.1.0",
]

[project.scripts]
mcp-mcp = "main:main"

[tool.setuptools.packages.find]
include = ["db*", "agents*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "settings"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.0.0",
    "watchfiles>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = [".", "db", "agents"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
