[project]
name = "mcp-mcp"
dynamic = ["version"]
description = "MCP-MCP: Meta-MCP Server for dynamic MCP server discovery and provisioning"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["mcp", "model-context-protocol", "ai", "claude", "server-discovery"]
authors = [{ name = "Wojciech Wojtyniak" }]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
]
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.9.4",
    "pydantic-settings>=2.10.1",
    "rich>=14.0.0",
    "sentence-transformers>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/wojtyniak/mcp-mcp"
Repository = "https://github.com/wojtyniak/mcp-mcp"
Documentation = "https://github.com/wojtyniak/mcp-mcp#readme"
Issues = "https://github.com/wojtyniak/mcp-mcp/issues"

[project.scripts]
mcp-mcp = "main:main"

[tool.setuptools.packages.find]
include = ["db*"]

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
[tool.setuptools]
py-modules = ["main", "settings"]

[dependency-groups]
dev = ["pytest-asyncio>=1.0.0", "twine>=6.1.0", "watchfiles>=1.1.0"]

[tool.pytest.ini_options]
testpaths = ["tests", "db"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "-ra"]
